# hugsqlx

./: .gitignore  Cargo.toml  README.md  README.org  license
examples/: Cargo.toml
examples/common/: Cargo.toml
examples/common/resources/: queries.sql
examples/common/src/: lib.rs
examples/hugsqlx-example/: Cargo.toml  README.org
examples/hugsqlx-example/migrations/: 20221028184256_schema.sql
examples/hugsqlx-example/src/: main.rs
examples/mysql/: Cargo.toml
examples/mysql-example/: Cargo.toml  README.md
examples/mysql-example/resources/: queries.sql
examples/mysql-example/src/: main.rs
examples/mysql/src/: main.rs
examples/postgres/: Cargo.toml
examples/postgres-example/: Cargo.toml  README.md
examples/postgres-example/resources/: queries.sql
examples/postgres-example/src/: main.rs
examples/postgres/src/: main.rs
examples/resources/: queries.sql
examples/sqlite/: Cargo.toml
examples/sqlite-example/: Cargo.toml  README.md
examples/sqlite-example/src/: main.rs
examples/sqlite/src/: main.rs
examples/src/: main.rs
hugsqlx-core/: Cargo.toml  README.md  README.org
hugsqlx-core/src/: condblock.rs  lib.rs  parser.rs
hugsqlx-derive/: Cargo.toml  README.md  README.org
hugsqlx-derive/src/: lib.rs
src/: lib.rs
