[package]
name = "hugsqlx"
version = "0.1.2"
description = "Turning SQL queries into Rust functions"
repository = "https://github.com/mbuczko/hugsqlx"
readme = "README.md"
authors = ["Michał Buczko"]
keywords = ["sql", "postgres", "sqlite", "mysql", "hugsql"]
categories = ["database", "filesystem"]
license = "MIT"
edition = "2021"

[lib]

[workspace]
members = ["hugsqlx-derive", "hugsqlx-core", "examples"]

[dependencies]
hugsqlx-derive = { version = "0.1.1", path = "hugsqlx-derive" }
hugsqlx-core = { version = "0.1.2", path = "hugsqlx-core" }

[dev-dependencies]
async-trait = "0.1.58"
tokio = { version = "1.21.2", features = ["macros"]}
sqlx = { version = "0.6.2", features = ["sqlite", "runtime-tokio-native-tls"] }
uuid = { version = "1.2.1", features = ["v4"] }
anyhow = "1.0"
futures = "0.3"

[features]
postgres = ["hugsqlx-derive/postgres", "hugsqlx-core/postgres"]
sqlite = ["hugsqlx-derive/sqlite", "hugsqlx-core/sqlite"]
mysql = ["hugsqlx-derive/mysql", "hugsqlx-core/mysql"]
