[package]
name = "hugsqlx"
version = "0.3.0"
description = "Turning SQL queries into Rust functions"
repository = "https://github.com/mbuczko/hugsqlx"
readme = "README.md"
authors = ["Michał Buczko"]
keywords = ["sql", "postgres", "sqlite", "mysql", "hugsql"]
categories = ["database", "filesystem"]
license = "MIT"
edition = "2021"

[lib]

[workspace]
members = ["hugsqlx-derive", "hugsqlx-core", "examples/*"]

[dependencies]
hugsqlx-derive = { version = "0.3.0", path = "hugsqlx-derive" }
hugsqlx-core = { version = "0.3.0", path = "hugsqlx-core" }

[features]
postgres = ["hugsqlx-derive/postgres", "hugsqlx-core/postgres"]
sqlite = ["hugsqlx-derive/sqlite", "hugsqlx-core/sqlite"]
mysql = ["hugsqlx-derive/mysql", "hugsqlx-core/mysql"]
