[package]
name = "hugsqlx-example"
version = "0.1.0"
edition = "2021"
workspace = "../"

[dependencies]
hugsqlx = { path = "../", version = "0.1.0", features = [ "sqlite"] }
sqlx = { version = "0.6.2", features = ["sqlite", "runtime-tokio-native-tls"] }
tokio = { version = "1.21.2", features = ["macros"]}
uuid = { version = "1.2.1", features = ["v4"] }
async-trait = "0.1.58"
anyhow = "1.0"
futures = "0.3"
