[package]
version = "0.2.0"
name = "hugsqlx-core"
description = "Turning SQL queries into Rust functions"
repository = "https://github.com/mbuczko/hugsqlx"
readme = "README.md"
authors = ["Michał Buczko"]
keywords = ["sql", "postgres", "sqlite", "mysql", "hugsql"]
categories = ["database", "filesystem"]
license = "MIT"
edition = "2021"

[dependencies]
syn = {version = "1", default-features = false, features = ["derive", "parsing", "printing", "proc-macro"]}
cfg-if = "1"
proc-macro2 = "1"
quote = "1"
chumsky = "0.8.0"
walkdir = "2.3.2"

[features]
postgres = []
sqlite = []
mysql = []
