[package]
version = "0.3.0"
name = "hugsqlx-derive"
description = "Turning SQL queries into Rust functions"
repository = "https://github.com/mbuczko/hugsqlx"
readme = "README.md"
authors = ["Michał Buczko"]
keywords = ["sql", "postgres", "sqlite", "mysql", "hugsql"]
categories = ["database", "filesystem"]
license = "MIT"
edition = "2021"

[lib]
proc-macro = true

[dependencies]
hugsqlx-core = { version = "0.3.0", path = "../hugsqlx-core" }
syn = {version = "1", default-features = false, features = ["derive", "parsing", "proc-macro"]}
proc-macro2 = "1"
quote = "1"

[features]
postgres = ["hugsqlx-core/postgres"]
sqlite = ["hugsqlx-core/sqlite"]
mysql = ["hugsqlx-core/mysql"]
