[package]
name = "mysql-example"
version = "0.1.0"
edition = "2021"

[dependencies]
hugsqlx = { path = "../../", features = [ "mysql"] }
sqlx = { version = "0.7.2", features = ["mysql", "runtime-tokio-rustls"] }
tokio = { version = "1", features = ["full"]}
anyhow = "1.0"
futures = "0.3"
futures-core = "0.3"
